# PolishNotation

./: CMakeLists.txt  Operations.cpp  Operations.h  PolishNotation.cpp  PolishNotation.h  Resulter.cpp  Resulter.h  Stack.cpp  Stack.h  main.cpp  tests.cpp
